create structure and style guide

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Projet_1</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#">accueil</a></li>
+            <li><a href="#">activités</a></li>
+            <li><a href="#">infos utiles</a></li>
+            <li><a href="#">aux alentours</a></li>
+        </ul>
+    </nav>
     <script src="javascript.js"></script>
 </body>
 </html>
