add dark mode and nav

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <title>Projet_1</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#">accueil</a></li>
-            <li><a href="#">activités</a></li>
-            <li><a href="#">infos utiles</a></li>
-            <li><a href="#">aux alentours</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <div class="dark-mode">
+                <button class="switch"></button>
+            </div>
+            <ul>
+                <li><a href="#">accueil</a></li>
+                <li><a href="#">activités</a></li>
+                <li><a href="#">infos utiles</a></li>
+                <li><a href="#">aux alentours</a></li>
+            </ul>
+        </nav>
+    </header>
     <script src="javascript.js"></script>
 </body>
 </html>
