add image and texte

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <div>
+                <img src="assets/accueil_1.jpg" alt="Image d'un chalet à la montagne">
+                <p>Val Cenis est une station de montagne à l’altitude parfaite pour s’oxygéner et se ressourcer dans un environnement très nature au pied du Col du Mont-Cenis. C’est aussi une destination aux multiples facettes : familiale et sportive, authentique et innovante, reposante et animée, généreuse et sincère.
+                </p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p></p>
+            </div>
+        </section>
+    </main>
     <script src="javascript.js"></script>
 </body>
 </html>
