waiting for icon in footer

--- a/index.html
+++ b/index.html
@@ -29,15 +29,22 @@
                 </p>
             </div>
             <div>
-                <img src="" alt="">
-                <p></p>
+                <img src="assets/val-cenis-photo2.jpg" alt="Image d'une montagne">
+                <p>La station de ski de Val Cenis a été créée en 1967 sur les anciennes communes de Lanslevillard et Lanslebourg. En 2008, la station de Termignon lui a été reliée par l’intermédiaire du télésiège de la Turra et ainsi 133km de pistes alpines sont proposées aux amoureux de la glisse.
+                </p>
             </div>
             <div>
-                <img src="" alt="">
-                <p></p>
+                <img src="assets/val-cenis-3.jpeg" alt="">
+                <p>Depuis le 1er janvier 2017, Val Cenis n’est plus seulement une station de ski mais une commune qui regroupe désormais les anciens villages que sont Bramans, Sollières-Sardières, Termignon-la-Vanoise, Lanslebourg Mont-Cenis et Lanslevillard. Val Cenis est alors, la deuxième plus grande commune de France métropolitaine derrière la commune de Arles.
+                </p>
             </div>
         </section>
     </main>
+    <footer>
+        <div>
+            
+        </div>
+    </footer>
     <script src="javascript.js"></script>
 </body>
 </html>
