--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <li><a href="#">aux alentours</a></li>
             </ul>
         </nav>
+        <h1>val cenis</h1>
     </header>
     <main>
-        <section>
+        <section class="flex-container">
             <div>
                 <img src="assets/accueil_1.jpg" alt="Image d'un chalet à la montagne">
                 <p>Val Cenis est une station de montagne à l’altitude parfaite pour s’oxygéner et se ressourcer dans un environnement très nature au pied du Col du Mont-Cenis. C’est aussi une destination aux multiples facettes : familiale et sportive, authentique et innovante, reposante et animée, généreuse et sincère.
