--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/5d3376cb26.js" crossorigin="anonymous"></script>
     <title>Projet_1</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
     </main>
     <footer>
         <div>
-            
+            <i class="fa-brands fa-facebook"></i>
         </div>
     </footer>
     <script src="javascript.js"></script>
