--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     </main>
     <footer>
         <div>
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-facebook fa-2x"><a href="#"></a></i>
+            <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
+            <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
         </div>
     </footer>
     <script src="javascript.js"></script>
