create second page

--- a/accueil.html
+++ b/accueil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/5d3376cb26.js" crossorigin="anonymous"></script>
-    <title>Projet_1</title>
+    <title>Projet_1 - Accueil</title>
 </head>
 <body>
     <header>
