need transition in button

--- a/activites.html
+++ b/activites.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="dark-mode">
                 <div class="btn"></div>
-                <i class="fas fa-moon"></i>
+                <!-- <i class="fas fa-moon"></i> -->
             </div>
             <ul>
                 <li><a href="#">accueil</a></li>
