--- a/accueil.html
+++ b/accueil.html
@@ -12,7 +12,8 @@
     <header>
         <nav>
             <div class="dark-mode">
-                <button class="switch"></button>
+                <div class="btn"></div>
+                <!-- <i class="fas fa-moon"></i> -->
             </div>
             <ul>
                 <li><a href="#">accueil</a></li>
@@ -26,7 +27,7 @@
     <main>
         <section class="flex-container">
             <div>
-                <img src="assets/accueil_1.jpg" alt="Image d'un chalet à la montagne">
+                <img class="img-shadow" src="assets/accueil_1.jpg" alt="Image d'un chalet à la montagne">
                 <p>Val Cenis est une station de montagne à l’altitude parfaite pour s’oxygéner et se ressourcer dans un environnement très nature au pied du Col du Mont-Cenis. C’est aussi une destination aux multiples facettes : familiale et sportive, authentique et innovante, reposante et animée, généreuse et sincère.
                 </p>
             </div>
