--- a/accueil.html
+++ b/accueil.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/5d3376cb26.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
     <title>Projet_1 - Accueil</title>
 </head>
 <body>
@@ -13,7 +13,9 @@
         <nav>
             <div class="dark-mode">
                 <div class="btn"></div>
-                <!-- <i class="fas fa-moon"></i> -->
+                <i class="fas fa-moon"></i>
+                <i class="fa-solid fa-sun"></i>
+
             </div>
             <ul>
                 <li><a href="#">accueil</a></li>
@@ -45,7 +47,7 @@
     </main>
     <footer>
         <div>
-            <i class="fa-brands fa-facebook fa-2x"><a href="#"></a></i>
+            <i class="fa-brands fa-facebook fa-2x"></i>
             <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
             <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
         </div>
