--- a/accueil.html
+++ b/accueil.html
@@ -15,7 +15,6 @@
                 <div class="btn"></div>
                 <i class="fas fa-moon"></i>
                 <i class="fa-solid fa-sun"></i>
-
             </div>
             <ul>
                 <li><a href="#">accueil</a></li>
@@ -34,12 +33,12 @@
                 </p>
             </div>
             <div>
-                <img src="assets/val-cenis-photo2.jpg" alt="Image d'une montagne">
+                <img class="img-shadow" src="assets/val-cenis-photo2.jpg" alt="Image d'une montagne">
                 <p>La station de ski de Val Cenis a été créée en 1967 sur les anciennes communes de Lanslevillard et Lanslebourg. En 2008, la station de Termignon lui a été reliée par l’intermédiaire du télésiège de la Turra et ainsi 133km de pistes alpines sont proposées aux amoureux de la glisse.
                 </p>
             </div>
             <div>
-                <img src="assets/val-cenis-3.jpeg" alt="">
+                <img class="img-shadow" src="assets/val-cenis-3.jpeg" alt="">
                 <p>Depuis le 1er janvier 2017, Val Cenis n’est plus seulement une station de ski mais une commune qui regroupe désormais les anciens villages que sont Bramans, Sollières-Sardières, Termignon-la-Vanoise, Lanslebourg Mont-Cenis et Lanslevillard. Val Cenis est alors, la deuxième plus grande commune de France métropolitaine derrière la commune de Arles.
                 </p>
             </div>
