--- a/activites.html
+++ b/activites.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/5d3376cb26.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
     <title>Projet_1 - Activité</title>
 </head>
-
 <body>
     <header>
         <nav>
             <div class="dark-mode">
                 <div class="btn"></div>
-                <!-- <i class="fas fa-moon"></i> -->
+                <i class="fas fa-moon"></i>
+                <i class="fa-solid fa-sun"></i>
             </div>
             <ul>
                 <li><a href="#">accueil</a></li>
