add background opacity 0.7 main title

--- a/activites.html
+++ b/activites.html
@@ -23,7 +23,7 @@
                 <li><a href="#">aux alentours</a></li>
             </ul>
         </nav>
-        <h1>les activités à val cenis</h1>
+        <h1 class="title-background">les activités à val cenis</h1>
     </header>
     <main>
         <div class="main-container">
