formating img and txt

--- a/activites.html
+++ b/activites.html
@@ -30,16 +30,18 @@
             <section class="first-container">
                 <h2>été</h2>
                 <div>
-                    <img src="" alt="">
-                    <p>coucou1</p>
+                    <img src="assets/randonnée.jpg" class="img-shadow" alt="">
+                    <p class="paragraphe">Vous connaissez la montagne l’hiver ? Partez à la découverte de cet environnement l’été et profitez d’une nature préservée pour vous détendre, vous ressourcer.
+                        Du Parc National de la Vanoise aux grands espaces frontaliers, vous trouverez en Haute Maurienne Vanoise la tranquillité et le bien-être.
+                        </p>
                 </div>
                 <div>
                     <img src="" alt="">
-                    <p>coucou2</p>
+                    <p class="paragraphe">coucou2</p>
                 </div>
                 <div>
                     <img src="" alt="">
-                    <p>coucou3</p>
+                    <p class="paragraphe">coucou3</p>
                 </div>
             </section>
             <section class="second-container">
