--- a/accueil.html
+++ b/accueil.html
@@ -29,17 +29,17 @@
         <section class="flex-container">
             <div>
                 <img class="img-shadow" src="assets/accueil_1.jpg" alt="Image d'un chalet à la montagne">
-                <p>Val Cenis est une station de montagne à l’altitude parfaite pour s’oxygéner et se ressourcer dans un environnement très nature au pied du Col du Mont-Cenis. C’est aussi une destination aux multiples facettes : familiale et sportive, authentique et innovante, reposante et animée, généreuse et sincère.
+                <p class="paragraphe">Val Cenis est une station de montagne à l’altitude parfaite pour s’oxygéner et se ressourcer dans un environnement très nature au pied du Col du Mont-Cenis. C’est aussi une destination aux multiples facettes : familiale et sportive, authentique et innovante, reposante et animée, généreuse et sincère.
                 </p>
             </div>
             <div>
                 <img class="img-shadow" src="assets/val-cenis-photo2.jpg" alt="Image d'une montagne">
-                <p>La station de ski de Val Cenis a été créée en 1967 sur les anciennes communes de Lanslevillard et Lanslebourg. En 2008, la station de Termignon lui a été reliée par l’intermédiaire du télésiège de la Turra et ainsi 133km de pistes alpines sont proposées aux amoureux de la glisse.
+                <p class="paragraphe">La station de ski de Val Cenis a été créée en 1967 sur les anciennes communes de Lanslevillard et Lanslebourg. En 2008, la station de Termignon lui a été reliée par l’intermédiaire du télésiège de la Turra et ainsi 133km de pistes alpines sont proposées aux amoureux de la glisse.
                 </p>
             </div>
             <div>
                 <img class="img-shadow" src="assets/val-cenis-3.jpeg" alt="">
-                <p>Depuis le 1er janvier 2017, Val Cenis n’est plus seulement une station de ski mais une commune qui regroupe désormais les anciens villages que sont Bramans, Sollières-Sardières, Termignon-la-Vanoise, Lanslebourg Mont-Cenis et Lanslevillard. Val Cenis est alors, la deuxième plus grande commune de France métropolitaine derrière la commune de Arles.
+                <p class="paragraphe">Depuis le 1er janvier 2017, Val Cenis n’est plus seulement une station de ski mais une commune qui regroupe désormais les anciens villages que sont Bramans, Sollières-Sardières, Termignon-la-Vanoise, Lanslebourg Mont-Cenis et Lanslevillard. Val Cenis est alors, la deuxième plus grande commune de France métropolitaine derrière la commune de Arles.
                 </p>
             </div>
         </section>
