--- a/accueil.html
+++ b/accueil.html
@@ -17,8 +17,8 @@
                 <i class="fa-solid fa-sun"></i>
             </div>
             <ul>
-                <li><a href="#">accueil</a></li>
-                <li><a href="#">activités</a></li>
+                <li><a href="accueil.html">accueil</a></li>
+                <li><a href="activites.html">activités</a></li>
                 <li><a href="#">infos utiles</a></li>
                 <li><a href="#">aux alentours</a></li>
             </ul>
