--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="accueil.html">accueil</a></li>
                 <li><a href="activites.html">activités</a></li>
-                <li><a href="#">infos utiles</a></li>
+                <li><a href="infos-utiles.html">infos utiles</a></li>
                 <li><a href="#">aux alentours</a></li>
             </ul>
         </nav>
@@ -29,20 +29,20 @@
     <main class="contain-info">
         <div class="contain-first-info">
             <div>
-                <img src="assets/ski_map.jpg" alt="">
+                <img class="img-shadow" src="assets/ski_map.jpg" alt="">
                 <h3>domaine skiable alpin</h3>
                 <p class="paragraphe-hidden">À la frontière de la France et de l’Italie, la glisse se décline également en version grand ski : 1 400 m de dénivelé répartis sur 125 km de pistes, la station est le berceau de champions plusieurs fois médaillés comme Pierre-Emmanuel Dalcin.
                     *Ouverture partielle du domaine skiable du 11 au 16 décembre 2022 (tarifs publics à -50%) et du 15 au 21 avril 2023 (tarifs publics à -30%).
                     </p>
             </div>
             <div>
-                <img src="assets/chalet.jpg" alt="">
+                <img class="img-shadow" src="assets/chalet.jpg" alt="">
                 <h3>hébergements</h3>
                 <p class="paragraphe-hidden">Les hébergeurs particuliers, amoureux de leur territoire, sont à votre service pour vous faire partager l’esprit de Val Cenis, regroupant Lanslevillard, Lanslebourg, Termignon, Sollières-Sardières et Bramans. Avec la démarche « Qualité Hébergement » de Haute Maurienne Vanoise, tout est mis en œuvre pour vous recevoir chaleureusement dans de beaux appartements pour deux, pour une famille ou un groupe d’amis.
                     </p>
             </div>
             <div>
-                <img src="assets/card.jpg" alt="">
+                <img class="img-shadow" src="assets/card.jpg" alt="">
                 <h3>forfaits</h3>
                 <p class="paragraphe-hidden">Dates d'ouverture* du domaine skiable du 11 décembre 2022 au 21 avril 2023
                     *Ouverture partielle du domaine skiable du 11 au 16 décembre 2022 (tarifs publics à -50%)et du 15 au 21 avril 2023 (tarifs publics à -30%).
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="contain-second-info">
-            <iframe class="iframe-width" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d179685.70708553595!2d6.75147098384149!3d45.27631483088402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478998dbab051121%3A0x77826eb9394e3d06!2sVal-Cenis!5e0!3m2!1sfr!2sfr!4v1669215531982!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="img-shadow" class="iframe-width" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d179685.70708553595!2d6.75147098384149!3d45.27631483088402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478998dbab051121%3A0x77826eb9394e3d06!2sVal-Cenis!5e0!3m2!1sfr!2sfr!4v1669215531982!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="transport">
                 <div>
                     <p class="paragraphe">Autoroute A43 en direction de Turin (Tunnel du Fréjus, Italie), sortie n°30 – Modane, Haute Maurienne, puis route départementale 1006 (ex-RN6).
