--- a/activites.html
+++ b/activites.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="accueil.html">accueil</a></li>
                 <li><a href="activites.html">activités</a></li>
-                <li><a href="#">infos utiles</a></li>
+                <li><a href="infos-utiles.html">infos utiles</a></li>
                 <li><a href="#">aux alentours</a></li>
             </ul>
         </nav>
