--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -29,12 +29,15 @@
 
     <main class="contain-info">
         <div class="contain-first-info">
-            <div >
+            <div>
                 <img class="img-shadow" src="assets/ski_map.jpg" alt="">
-                <h3>domaine skiable alpin</h3>
-                <p class="paragraphe">À la frontière de la France et de l’Italie, la glisse se décline également en version grand ski : 1 400 m de dénivelé répartis sur 125 km de pistes, la station est le berceau de champions plusieurs fois médaillés comme Pierre-Emmanuel Dalcin.
-                    *Ouverture partielle du domaine skiable du 11 au 16 décembre 2022 (tarifs publics à -50%) et du 15 au 21 avril 2023 (tarifs publics à -30%).
+                
+                <div class="paragraphe">
+                    <h3>domaine skiable alpin</h3>
+                    <p>À la frontière de la France et de l’Italie, la glisse se décline également en version grand ski : 1 400 m de dénivelé répartis sur 125 km de pistes, la station est le berceau de champions plusieurs fois médaillés comme Pierre-Emmanuel Dalcin.
+                        *Ouverture partielle du domaine skiable du 11 au 16 décembre 2022 (tarifs publics à -50%) et du 15 au 21 avril 2023 (tarifs publics à -30%).
                     </p>
+                </div>
             </div>
             <div>
                 <img class="img-shadow" src="assets/chalet.jpg" alt="">
