--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -29,9 +29,9 @@
 
     <main class="contain-info">
         <div class="contain-first-info">
-            <div>
+            <div class="coucou">
                 <img class="img-shadow" src="assets/ski_map.jpg" alt="">
-                <div class="paragraphe">
+                <div class="paragraphe-hidden">
                     <h3>domaine skiable alpin</h3>
                     <p>À la frontière de la France et de l’Italie, la glisse se décline également en version grand ski : 1 400 m de dénivelé répartis sur 125 km de pistes, la station est le berceau de champions plusieurs fois médaillés comme Pierre-Emmanuel Dalcin.
                         *Ouverture partielle du domaine skiable du 11 au 16 décembre 2022 (tarifs publics à -50%) et du 15 au 21 avril 2023 (tarifs publics à -30%).
@@ -40,7 +40,7 @@
             </div>
             <div>
                 <img class="img-shadow" src="assets/chalet.jpg" alt="">
-                <div class="paragraphe">
+                <div class="paragraphe-hidden">
                     <h3>hébergements</h3>
                     <p>Les hébergeurs particuliers, amoureux de leur territoire, sont à votre service pour vous faire partager l’esprit de Val Cenis, regroupant Lanslevillard, Lanslebourg, Termignon, Sollières-Sardières et Bramans. Avec la démarche « Qualité Hébergement » de Haute Maurienne Vanoise, tout est mis en œuvre pour vous recevoir chaleureusement dans de beaux appartements pour deux, pour une famille ou un groupe d’amis.
                         </p>
@@ -48,7 +48,7 @@
             </div>
             <div>
                 <img class="img-shadow" src="assets/card.jpg" alt="">
-                <div class="paragraphe">
+                <div class="paragraphe-hidden">
                     <h3>forfaits</h3>
                     <p>Dates d'ouverture* du domaine skiable du 11 décembre 2022 au 21 avril 2023
                         *Ouverture partielle du domaine skiable du 11 au 16 décembre 2022 (tarifs publics à -50%)et du 15 au 21 avril 2023 (tarifs publics à -30%).
