need to fix hidden txt

--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -29,7 +29,7 @@
 
     <main class="contain-info">
         <div class="contain-first-info">
-            <div class="coucou">
+            <div>
                 <img class="img-shadow" src="assets/ski_map.jpg" alt="">
                 <div class="paragraphe-hidden">
                     <h3>domaine skiable alpin</h3>
