--- a/alentours.html
+++ b/alentours.html
@@ -28,15 +28,15 @@
     </header>
            <main class="main-alentours">
                 <div>
-                    <img src="" alt="">
+                    <img class="img-shadow" src="assets/bessans.jpg" alt="">
                     <p></p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
                     <p></p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img class="img-shadow" src="assets/la_norma.jpg" alt="">
                     <p></p>
                 </div>
 
