--- a/alentours.html
+++ b/alentours.html
@@ -29,17 +29,16 @@
            <main class="main-alentours">
                 <div>
                     <img class="img-shadow" src="assets/bessans.jpg" alt="">
-                    <p></p>
+                    <p class="paragraphe"><a href="#">bessans</a></p>
                 </div>
                 <div>
                     <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
-                    <p></p>
+                    <p class="paragraphe"><a href="#">bonneval sur arc</a></p>
                 </div>
                 <div>
                     <img class="img-shadow" src="assets/la_norma.jpg" alt="">
-                    <p></p>
+                    <p class="paragraphe"><a href="#">la norma</a></p>
                 </div>
-
            </main>
             
     <footer>
