--- a/alentours-bessans.html
+++ b/alentours-bessans.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
-    <title>Projet_1 - Aux alentours</title>
+    <title>Projet_1 - Aux alentours - Bessans</title>
 </head>
 <body>
     <header>
@@ -24,20 +24,13 @@
             </ul>
 
         </nav>
-        <h1 class="title-background">val cenis et ses alentours</h1>
+        <h1 class="title-background">bessans</h1>
     </header>
-           <main class="main-alentours">
+           <main class="container-alentours">
                 <div>
                     <img class="img-shadow" src="assets/bessans.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bessans</a></p>
-                </div>
-                <div>
-                    <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bonneval sur arc</a></p>
-                </div>
-                <div>
-                    <img class="img-shadow" src="assets/la_norma.jpg" alt="">
-                    <p class="paragraphe"><a href="#">la norma</a></p>
+                    <p class="paragraphe">Un domaine de 133 km de pistes à 1750 m d’altitude avec un enneigement exceptionnel, assuré par plusieurs enneigeurs en début de saison. Toutes tracées en alternatif et skating, les pistes vous permettront de profiter de longues glisses et d’ainsi retrouver de bonnes sensations dès les premiers jours de ski.
+                    </p>
                 </div>
            </main>
             
