--- a/alentours-bonneval.html
+++ b/alentours-bonneval.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
-    <title>Projet_1 - Aux alentours</title>
+    <title>Projet_1 - Aux alentours - Bonneval</title>
 </head>
 <body>
     <header>
@@ -24,20 +24,15 @@
             </ul>
 
         </nav>
-        <h1 class="title-background">val cenis et ses alentours</h1>
+        <h1 class="title-background">bonneval sur arc</h1>
     </header>
-           <main class="main-alentours">
+           <main class="container-alentours">
                 <div>
-                    <img class="img-shadow" src="assets/bessans.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bessans</a></p>
-                </div>
-                <div>
-                    <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bonneval sur arc</a></p>
-                </div>
-                <div>
-                    <img class="img-shadow" src="assets/la_norma.jpg" alt="">
-                    <p class="paragraphe"><a href="#">la norma</a></p>
+                    <img class="img-shadow" src="assets/bonneval.jpg" alt="">
+                    <p class="paragraphe">Au pied du col de l’Iseran (2764 m d’altitude), la station-village de Bonneval sur Arc attire les skieurs avides de grands espaces ainsi que les vacanciers en quête de ressourcement.
+                        Classé parmi les « Plus Beaux Villages de France » Bonneval sur Arc est paré de chalets traditionnels bâtis de pierres de taille et coiffés de toits en lauzes.
+                        Entre le Parc national de la Vanoise, les glaciers (Evettes, Grand Méan, Sources de l’Arc…), ou le hameau de l’Ecot, Bonneval sur Arc est tout simplement la « station-village pépite » de Haute Maurienne Vanoise.
+                    </p>
                 </div>
            </main>
             
