--- a/alentours-la_norma.html
+++ b/alentours-la_norma.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
-    <title>Projet_1 - Aux alentours</title>
+    <title>Projet_1 - Aux alentours - La Norma</title>
 </head>
 <body>
     <header>
@@ -24,20 +24,16 @@
             </ul>
 
         </nav>
-        <h1 class="title-background">val cenis et ses alentours</h1>
+        <h1 class="title-background">la norma</h1>
     </header>
-           <main class="main-alentours">
+           <main class="container-alentours">
                 <div>
-                    <img class="img-shadow" src="assets/bessans.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bessans</a></p>
-                </div>
-                <div>
-                    <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bonneval sur arc</a></p>
-                </div>
-                <div>
-                    <img class="img-shadow" src="assets/la_norma.jpg" alt="">
-                    <p class="paragraphe"><a href="#">la norma</a></p>
+                    <img class="img-shadow" src="assets/telesiege.jpg" alt="">
+                    <p class="paragraphe">La Norma saura vous séduire par son front de neige, ses hébergements au pied des pistes, sa station 100% piétonne et sa convivialité.
+                        Une station cosy, c’est ça aussi : les enfants peuvent aller à leurs cours de ski ou en revenir de façon autonome : pas de route à traverser !
+                        Et le soir, vous aurez bien entendu le temps de passer boire un chocolat chaud dans les nombreux bars cosy de la station.
+                        Vous voyez bien que la Norma est faite pour vous !
+                    </p>
                 </div>
            </main>
             
