add link in nav bar

--- a/accueil.html
+++ b/accueil.html
@@ -20,7 +20,7 @@
                 <li><a href="accueil.html">accueil</a></li>
                 <li><a href="activites.html">activités</a></li>
                 <li><a href="infos-utiles.html">infos utiles</a></li>
-                <li><a href="#">aux alentours</a></li>
+                <li><a href="alentours.html">aux alentours</a></li>
             </ul>
         </nav>
         <h1>val cenis</h1>
