add link in alentours

--- a/alentours.html
+++ b/alentours.html
@@ -22,25 +22,29 @@
                 <li><a href="infos-utiles.html">infos utiles</a></li>
                 <li><a href="alentours.html">aux alentours</a></li>
             </ul>
-
         </nav>
         <h1 class="title-background">val cenis et ses alentours</h1>
     </header>
            <main class="main-alentours">
                 <div>
-                    <img class="img-shadow" src="assets/bessans.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bessans</a></p>
+                    <a href="alentours-bessans.html" target="_blank">
+                        <img class="img-shadow" src="assets/bessans.jpg" alt="">
+                        <p class="paragraphe">bessans</p>
+                    </a>
                 </div>
                 <div>
-                    <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
-                    <p class="paragraphe"><a href="#">bonneval sur arc</a></p>
+                    <a href="alentours-bonneval.html" target="_blank">
+                        <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
+                        <p class="paragraphe">bonneval sur arc</p>
+                    </a>
                 </div>
                 <div>
-                    <img class="img-shadow" src="assets/la_norma.jpg" alt="">
-                    <p class="paragraphe"><a href="#">la norma</a></p>
+                    <a href="alentours-la_norma.html" target="_blank">
+                        <img class="img-shadow" src="assets/la_norma.jpg" alt="">
+                        <p class="paragraphe">la norma</p>
+                    </a>
                 </div>
            </main>
-            
     <footer>
         <div>
             <i class="fa-brands fa-facebook fa-2x"></i>
