--- a/alentours.html
+++ b/alentours.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
     <title>Projet_1 - Aux alentours</title>
 </head>
