--- a/alentours-la_norma.html
+++ b/alentours-la_norma.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/3199a382cb.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Projet_1 - Aux alentours - La Norma</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="dark-mode">
-                <div class="btn"></div>
-                <i class="fas fa-moon"></i>
-                <i class="fa-solid fa-sun"></i>
-            </div>
-            <ul>
-                <li><a href="accueil.html">accueil</a></li>
-                <li><a href="activites.html">activités</a></li>
-                <li><a href="infos-utiles.html">infos utiles</a></li>
-                <li><a href="alentours.html">aux alentours</a></li>
-            </ul>
-
-        </nav>
-        <h1 class="title-background">la norma</h1>
-    </header>
-           <main class="container-alentours">
-                <div>
-                    <img class="img-shadow" src="assets/telesiege.jpg" alt="">
-                    <p class="paragraphe">La Norma saura vous séduire par son front de neige, ses hébergements au pied des pistes, sa station 100% piétonne et sa convivialité.
-                        Une station cosy, c’est ça aussi : les enfants peuvent aller à leurs cours de ski ou en revenir de façon autonome : pas de route à traverser !
-                        Et le soir, vous aurez bien entendu le temps de passer boire un chocolat chaud dans les nombreux bars cosy de la station.
-                        Vous voyez bien que la Norma est faite pour vous !
-                    </p>
-                </div>
-           </main>
-            
-    <footer>
-        <div>
-            <i class="fa-brands fa-facebook fa-2x"></i>
-            <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
-            <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      <nav>
+        <div class="dark-mode">
+          <div class="btn"></div>
+          <i class="fas fa-moon"></i>
+          <i class="fa-solid fa-sun"></i>
         </div>
+        <ul>
+          <li><a href="accueil.html">accueil</a></li>
+          <li><a href="activites.html">activités</a></li>
+          <li><a href="infos-utiles.html">infos utiles</a></li>
+          <li><a href="alentours.html">aux alentours</a></li>
+        </ul>
+      </nav>
+      <h1 class="title-background">la norma</h1>
+    </header>
+    <main class="container-alentours">
+      <div>
+        <img class="img-shadow" src="assets/telesiege.jpg" alt="" />
+        <p class="paragraphe">
+          La Norma saura vous séduire par son front de neige, ses hébergements
+          au pied des pistes, sa station 100% piétonne et sa convivialité. Une
+          station cosy, c’est ça aussi : les enfants peuvent aller à leurs cours
+          de ski ou en revenir de façon autonome : pas de route à traverser ! Et
+          le soir, vous aurez bien entendu le temps de passer boire un chocolat
+          chaud dans les nombreux bars cosy de la station. Vous voyez bien que
+          la Norma est faite pour vous !
+        </p>
+      </div>
+    </main>
+
+    <footer>
+      <div>
+        <i class="fa-brands fa-facebook fa-2x"></i>
+        <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
+        <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      </div>
     </footer>
     <script src="javascript.js"></script>
-</body>
+  </body>
+</html>
