--- a/alentours.html
+++ b/alentours.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/3199a382cb.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Projet_1 - Aux alentours</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="dark-mode">
-                <div class="btn"></div>
-                <i class="fas fa-moon"></i>
-                <i class="fa-solid fa-sun"></i>
-            </div>
-            <ul>
-                <li><a href="accueil.html">accueil</a></li>
-                <li><a href="activites.html">activités</a></li>
-                <li><a href="infos-utiles.html">infos utiles</a></li>
-                <li><a href="alentours.html">aux alentours</a></li>
-            </ul>
-        </nav>
-        <h1 class="title-background">val cenis et ses alentours</h1>
-    </header>
-           <main class="main-alentours">
-                <div>
-                    <a href="alentours-bessans.html" target="_blank">
-                        <img class="img-shadow" src="assets/bessans.jpg" alt="">
-                        <p class="paragraphe">bessans</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="alentours-bonneval.html" target="_blank">
-                        <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="">
-                        <p class="paragraphe">bonneval sur arc</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="alentours-la_norma.html" target="_blank">
-                        <img class="img-shadow" src="assets/la_norma.jpg" alt="">
-                        <p class="paragraphe">la norma</p>
-                    </a>
-                </div>
-           </main>
-    <footer>
-        <div>
-            <i class="fa-brands fa-facebook fa-2x"></i>
-            <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
-            <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      <nav>
+        <div class="dark-mode">
+          <div class="btn"></div>
+          <i class="fas fa-moon"></i>
+          <i class="fa-solid fa-sun"></i>
         </div>
+        <ul>
+          <li><a href="accueil.html">accueil</a></li>
+          <li><a href="activites.html">activités</a></li>
+          <li><a href="infos-utiles.html">infos utiles</a></li>
+          <li><a href="alentours.html">aux alentours</a></li>
+        </ul>
+      </nav>
+      <h1 class="title-background">val cenis et ses alentours</h1>
+    </header>
+    <main class="main-alentours">
+      <div>
+        <a href="alentours-bessans.html" target="_blank">
+          <img class="img-shadow" src="assets/bessans.jpg" alt="" />
+          <p class="paragraphe">bessans</p>
+        </a>
+      </div>
+      <div>
+        <a href="alentours-bonneval.html" target="_blank">
+          <img class="img-shadow" src="assets/bonneval_sur_arc.jpg" alt="" />
+          <p class="paragraphe">bonneval sur arc</p>
+        </a>
+      </div>
+      <div>
+        <a href="alentours-la_norma.html" target="_blank">
+          <img class="img-shadow" src="assets/la_norma.jpg" alt="" />
+          <p class="paragraphe">la norma</p>
+        </a>
+      </div>
+    </main>
+    <footer>
+      <div>
+        <i class="fa-brands fa-facebook fa-2x"></i>
+        <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
+        <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      </div>
     </footer>
     <script src="javascript.js"></script>
-</body>
+  </body>
+</html>
