--- a/alentours-bessans.html
+++ b/alentours-bessans.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/3199a382cb.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Projet_1 - Aux alentours - Bessans</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="dark-mode">
-                <div class="btn"></div>
-                <i class="fas fa-moon"></i>
-                <i class="fa-solid fa-sun"></i>
-            </div>
-            <ul>
-                <li><a href="accueil.html">accueil</a></li>
-                <li><a href="activites.html">activités</a></li>
-                <li><a href="infos-utiles.html">infos utiles</a></li>
-                <li><a href="alentours.html">aux alentours</a></li>
-            </ul>
-
-        </nav>
-        <h1 class="title-background">bessans</h1>
-    </header>
-           <main class="container-alentours">
-                <div>
-                    <img class="img-shadow" src="assets/bessans.jpg" alt="">
-                    <p class="paragraphe">Un domaine de 133 km de pistes à 1750 m d’altitude avec un enneigement exceptionnel, assuré par plusieurs enneigeurs en début de saison. Toutes tracées en alternatif et skating, les pistes vous permettront de profiter de longues glisses et d’ainsi retrouver de bonnes sensations dès les premiers jours de ski.
-                    </p>
-                </div>
-           </main>
-            
-    <footer>
-        <div>
-            <i class="fa-brands fa-facebook fa-2x"></i>
-            <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
-            <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      <nav>
+        <div class="dark-mode">
+          <div class="btn"></div>
+          <i class="fas fa-moon"></i>
+          <i class="fa-solid fa-sun"></i>
         </div>
+        <ul>
+          <li><a href="accueil.html">accueil</a></li>
+          <li><a href="activites.html">activités</a></li>
+          <li><a href="infos-utiles.html">infos utiles</a></li>
+          <li><a href="alentours.html">aux alentours</a></li>
+        </ul>
+      </nav>
+      <h1 class="title-background">bessans</h1>
+    </header>
+    <main class="container-alentours">
+      <div>
+        <img class="img-shadow" src="assets/bessans.jpg" alt="" />
+        <p class="paragraphe">
+          Un domaine de 133 km de pistes à 1750 m d’altitude avec un enneigement
+          exceptionnel, assuré par plusieurs enneigeurs en début de saison.
+          Toutes tracées en alternatif et skating, les pistes vous permettront
+          de profiter de longues glisses et d’ainsi retrouver de bonnes
+          sensations dès les premiers jours de ski.
+        </p>
+      </div>
+    </main>
+
+    <footer>
+      <div>
+        <i class="fa-brands fa-facebook fa-2x"></i>
+        <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
+        <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      </div>
     </footer>
     <script src="javascript.js"></script>
-</body>
+  </body>
+</html>
