--- a/alentours-bonneval.html
+++ b/alentours-bonneval.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/3199a382cb.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/3199a382cb.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Projet_1 - Aux alentours - Bonneval</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="dark-mode">
-                <div class="btn"></div>
-                <i class="fas fa-moon"></i>
-                <i class="fa-solid fa-sun"></i>
-            </div>
-            <ul>
-                <li><a href="accueil.html">accueil</a></li>
-                <li><a href="activites.html">activités</a></li>
-                <li><a href="infos-utiles.html">infos utiles</a></li>
-                <li><a href="alentours.html">aux alentours</a></li>
-            </ul>
-
-        </nav>
-        <h1 class="title-background">bonneval sur arc</h1>
-    </header>
-           <main class="container-alentours">
-                <div>
-                    <img class="img-shadow" src="assets/bonneval.jpg" alt="">
-                    <p class="paragraphe">Au pied du col de l’Iseran (2764 m d’altitude), la station-village de Bonneval sur Arc attire les skieurs avides de grands espaces ainsi que les vacanciers en quête de ressourcement.
-                        Classé parmi les « Plus Beaux Villages de France » Bonneval sur Arc est paré de chalets traditionnels bâtis de pierres de taille et coiffés de toits en lauzes.
-                        Entre le Parc national de la Vanoise, les glaciers (Evettes, Grand Méan, Sources de l’Arc…), ou le hameau de l’Ecot, Bonneval sur Arc est tout simplement la « station-village pépite » de Haute Maurienne Vanoise.
-                    </p>
-                </div>
-           </main>
-            
-    <footer>
-        <div>
-            <i class="fa-brands fa-facebook fa-2x"></i>
-            <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
-            <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      <nav>
+        <div class="dark-mode">
+          <div class="btn"></div>
+          <i class="fas fa-moon"></i>
+          <i class="fa-solid fa-sun"></i>
         </div>
+        <ul>
+          <li><a href="accueil.html">accueil</a></li>
+          <li><a href="activites.html">activités</a></li>
+          <li><a href="infos-utiles.html">infos utiles</a></li>
+          <li><a href="alentours.html">aux alentours</a></li>
+        </ul>
+      </nav>
+      <h1 class="title-background">bonneval sur arc</h1>
+    </header>
+    <main class="container-alentours">
+      <div>
+        <img class="img-shadow" src="assets/bonneval.jpg" alt="" />
+        <p class="paragraphe">
+          Au pied du col de l’Iseran (2764 m d’altitude), la station-village de
+          Bonneval sur Arc attire les skieurs avides de grands espaces ainsi que
+          les vacanciers en quête de ressourcement. Classé parmi les « Plus
+          Beaux Villages de France » Bonneval sur Arc est paré de chalets
+          traditionnels bâtis de pierres de taille et coiffés de toits en
+          lauzes. Entre le Parc national de la Vanoise, les glaciers (Evettes,
+          Grand Méan, Sources de l’Arc…), ou le hameau de l’Ecot, Bonneval sur
+          Arc est tout simplement la « station-village pépite » de Haute
+          Maurienne Vanoise.
+        </p>
+      </div>
+    </main>
+
+    <footer>
+      <div>
+        <i class="fa-brands fa-facebook fa-2x"></i>
+        <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
+        <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      </div>
     </footer>
     <script src="javascript.js"></script>
-</body>
+  </body>
+</html>
