add burger menu

--- a/accueil.html
+++ b/accueil.html
@@ -15,12 +15,19 @@
   <body>
     <header>
       <nav>
-        <div class="dark-mode">
-          <div class="btn"></div>
-          <i class="fas fa-moon"></i>
-          <i class="fa-solid fa-sun"></i>
+        <div class="top-div">
+          <div class="dark-mode">
+            <div class="btn"></div>
+            <i class="fas fa-moon"></i>
+            <i class="fa-solid fa-sun"></i>
+          </div>
+          <button type="button" aria-label="toggle navigation" class="nav-toggler">
+            <span class="line l1"></span>
+            <span class="line l2"></span>
+            <span class="line l3"></span>
+          </button>
         </div>
-        <ul>
+        <ul class="nav-bar-mobil">
           <li><a href="accueil.html">accueil</a></li>
           <li><a href="activites.html">activités</a></li>
           <li><a href="infos-utiles.html">infos utiles</a></li>
