--- a/alentours.html
+++ b/alentours.html
@@ -15,19 +15,26 @@
   <body>
     <header>
       <nav>
-        <div class="dark-mode">
-          <div class="btn"></div>
-          <i class="fas fa-moon"></i>
-          <i class="fa-solid fa-sun"></i>
+        <div class="top-div">
+          <div class="dark-mode">
+            <div class="btn"></div>
+            <i class="fas fa-moon"></i>
+            <i class="fa-solid fa-sun"></i>
+          </div>
+          <button type="button" aria-label="toggle navigation" class="nav-toggler">
+            <span class="line l1"></span>
+            <span class="line l2"></span>
+            <span class="line l3"></span>
+          </button>
         </div>
-        <ul>
+        <ul class="nav-bar-mobil">
           <li><a href="accueil.html">accueil</a></li>
           <li><a href="activites.html">activités</a></li>
           <li><a href="infos-utiles.html">infos utiles</a></li>
           <li><a href="alentours.html">aux alentours</a></li>
         </ul>
       </nav>
-      <h1 class="title-background">val cenis et ses alentours</h1>
+      <h1>val cenis</h1>
     </header>
     <main class="main-alentours">
       <div>
