add main title and hide h1 toggle burger menu

--- a/alentours.html
+++ b/alentours.html
@@ -34,7 +34,7 @@
           <li><a href="alentours.html">aux alentours</a></li>
         </ul>
       </nav>
-      <h1>val cenis</h1>
+      <h1>Aux alentours</h1>
     </header>
     <main class="main-alentours">
       <div>
