--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -34,7 +34,7 @@
           <li><a href="alentours.html">aux alentours</a></li>
         </ul>
       </nav>
-      <h1>val cenis</h1>
+      <h1>Infos utiles</h1>
     </header>
     <main class="contain-info">
       <div class="contain-first-info">
