--- a/activites.html
+++ b/activites.html
@@ -34,7 +34,7 @@
           <li><a href="alentours.html">aux alentours</a></li>
         </ul>
       </nav>
-      <h1>val cenis</h1>
+      <h1>activités</h1>
     </header>
     <main>
       <div class="main-container">
