--- a/alentours-bessans.html
+++ b/alentours-bessans.html
@@ -34,7 +34,7 @@
           <li><a href="alentours.html">aux alentours</a></li>
         </ul>
       </nav>
-      <h1>val cenis</h1>
+      <h1>bessans</h1>
     </header>
     <main class="container-alentours">
       <div>
