--- a/alentours-bessans.html
+++ b/alentours-bessans.html
@@ -15,23 +15,27 @@
   <body>
     <header>
       <nav>
-          <div class="dark-mode">
-            <div class="btn"></div>
-            <i class="fas fa-moon"></i>
-            <i class="fa-solid fa-sun"></i>
-          </div>
-          <button type="button" aria-label="toggle navigation" class="nav-toggler">
-            <span class="line l1"></span>
-            <span class="line l2"></span>
-            <span class="line l3"></span>
-          </button>
-        <ul class="nav-bar-mobil">
-          <li><a href="accueil.html">accueil</a></li>
-          <li><a href="activites.html">activités</a></li>
-          <li><a href="infos-utiles.html">infos utiles</a></li>
-          <li><a href="alentours.html">aux alentours</a></li>
-        </ul>
+        <div class="dark-mode">
+          <div class="btn"></div>
+          <i class="fas fa-moon"></i>
+          <i class="fa-solid fa-sun"></i>
+        </div>
+        <button
+          type="button"
+          aria-label="toggle navigation"
+          class="nav-toggler"
+        >
+          <span class="line l1"></span>
+          <span class="line l2"></span>
+          <span class="line l3"></span>
+        </button>
       </nav>
+      <ul class="nav-bar-mobil">
+        <li><a href="accueil.html">accueil</a></li>
+        <li><a href="activites.html">activités</a></li>
+        <li><a href="infos-utiles.html">infos utiles</a></li>
+        <li><a href="alentours.html">aux alentours</a></li>
+      </ul>
       <h1>bessans</h1>
     </header>
     <main class="container-alentours">
