add sun and flake icon in activites

--- a/activites.html
+++ b/activites.html
@@ -41,7 +41,10 @@
     <main>
       <div class="main-container">
         <section class="first-container">
-          <h2>été</h2>
+          <h2>
+            été
+            <i class="fa-solid fa-mountain-sun"></i>
+          </h2>
           <div>
             <img src="assets/randonnée.jpg" class="img-shadow" alt="" />
             <p class="paragraphe">
@@ -76,7 +79,10 @@
           </div>
         </section>
         <section class="second-container">
-          <h2>hiver</h2>
+          <h2>
+            hiver
+            <i class="fa-regular fa-snowflake"></i>
+          </h2>
           <div>
             <img src="assets/autumn.jpg" class="img-shadow" alt="" />
             <p class="paragraphe">
