need to fixe h1 in responsive

--- a/accueil.html
+++ b/accueil.html
@@ -30,7 +30,7 @@
           <span class="line l3"></span>
         </button>
       </nav>
-      <ul class="nav-bar-mobil">
+      <ul class="nav-bar-mobil nav-bar-desktop">
         <li><a href="accueil.html">accueil</a></li>
         <li><a href="activites.html">activités</a></li>
         <li><a href="infos-utiles.html">infos utiles</a></li>
