fix responsive footer

--- a/alentours.html
+++ b/alentours.html
@@ -59,10 +59,20 @@
       </div>
     </main>
     <footer>
-      <div>
+      <div class="icone left">
+        <i class="fa-solid fa-person-hiking"></i>
+        <i class="fa-solid fa-tree"></i>
+        <i class="fa-solid fa-person-skiing"></i>
+      </div>
+      <div class="icone">
         <i class="fa-brands fa-facebook fa-2x"></i>
         <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
         <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+      </div>
+      <div class="icone right">
+        <i class="fa-solid fa-person-skiing"></i>
+        <i class="fa-solid fa-tree"></i>
+        <i class="fa-solid fa-person-hiking"></i>
       </div>
     </footer>
     <script src="javascript.js"></script>
