add bg header in all pages

--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+      <img src="assets/carousel/carousel_3.jpg" alt="" />
       <nav>
         <div class="dark-mode">
           <div class="btn"></div>
