--- a/alentours.html
+++ b/alentours.html
@@ -42,7 +42,7 @@
     <main class="main-alentours">
       <div>
         <a href="alentours-bessans.html" target="_blank">
-          <img class="img-shadow" src="assets/bessans.jpg" alt="" />
+          <img class="img-shadow coucou" src="assets/bessans.jpg" alt="" />
           <p class="paragraphe">bessans</p>
         </a>
       </div>
