--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -42,7 +42,7 @@
     <main class="contain-info">
       <div class="contain-first-info">
         <div>
-          <img class="img-shadow" src="assets/ski_map.jpg" alt="" />
+          <img class="img-shadow coucou" src="assets/ski_map.jpg" alt="" />
           <div class="paragraphe-hidden">
             <h3>domaine skiable alpin</h3>
             <p class="paragraphe-txt">
@@ -88,9 +88,9 @@
       </div>
       <div class="contain-second-info">
         <iframe
-          class="img-shadow"
-          class="iframe-width"
+          class="img-shadow iframe-width"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d179685.70708553595!2d6.75147098384149!3d45.27631483088402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478998dbab051121%3A0x77826eb9394e3d06!2sVal-Cenis!5e0!3m2!1sfr!2sfr!4v1669215531982!5m2!1sfr!2sfr"
+          
           width="600"
           height="450"
           style="border: 0"
